# VELASSCO

./: Jotne_on_Eddie.docx  README.md  SVN-recipes.txt
3rd party/: bison-3.0.tar.xz
EDM_Interface/: EDM_Interface.h  EDM_interface.cpp  EDMcluster.cpp  EDMcluster.hpp  EDMcluster_entityTypes.h  dem_schema_velassco.cpp  dem_schema_velassco.hpp  fem_schema_velassco.cpp  fem_schema_velassco.hpp  fem_schema_velassco_entityTypes.h
EDM_injector/DEM_injector/: compile_1.cmd  dem_schema_velassco.thrift  dem_schema_velassco_V5.thrift
EDM_injector/DEM_injector/DEM_ingest_server/: DEM_InjectorHandler.cpp  DEM_InjectorHandler.h  DEM_ingest_server.sln  DEM_ingest_server.vcxproj  DEM_inject_server.cpp  FEM_InjectorHandler.cpp  FEM_InjectorHandler.h  ReadMe.txt  stdafx.cpp  stdafx.h
EDM_injector/DEM_injector/gen-cpp/: DEM_Injector.cpp  DEM_Injector.h  DEM_Injector_server.skeleton.cpp  FEM_Injector.cpp  FEM_Injector.h  FEM_Injector_server.skeleton.cpp  dem_schema_velassco_constants.cpp  dem_schema_velassco_constants.h  dem_schema_velassco_types.cpp  dem_schema_velassco_types.h
EDM_injector/EDM_FEM_injector/: EDM_FEM_injector.cpp  EDM_FEM_injector.sln  EDM_FEM_injector.vcxproj  FEM_injector.cpp  FEM_injector.h  stdafx.h
EDM_plug_in/: Development_status.xls  EDM_plug_in.cpp  EDM_plug_in.sln  EDM_plug_in.vcxproj  EDMmodelCache.cpp  EDMmodelCache.h  Matrix.cpp  ReadMe.txt  VELaSSCoHandler.cpp  VELaSSCoHandler.h  stdafx.cpp  stdafx.h
EDM_plug_in/schemata/: DEM_SCHEMA_VELASSCO_V5.vex  EDMCLUSTER.vex  EDMcluster.exp  FEM_SCHEMA_VELASSCO.vex  dem_schema_velassco.exp  dem_schema_velassco.thrift  fem_schema_velassco.exp
EDM_plug_in/scripts/: CreateDbTemplate.cmd  CreateDbTemplate.txt  CreateDbTemplate2.txt  InjectAllModels.cmd  VELaSSCo_cluster_1_0_9.txt  VELaSSCo_cluster_2.txt  injectLoop.cmd  start_servers.cmd  start_servers_1.cmd  start_servers_2.cmd  stop_servers.cmd  stop_servers.txt
Examples/HBase_MR_IntCount/: CMakeLists.txt
Examples/HBase_MR_IntCount/src/: CMakeLists.txt
ThriftInjector/: CMakeLists.txt  README.md
ThriftInjector/HBaseThrift/: CMakeLists.txt
ThriftInjector/HBaseThrift/DemoClient/: CMakeLists.txt  DemoClient.cpp
ThriftInjector/HBaseThrift/gen-cpp/: Hbase.h  Hbase_constants.cpp  Hbase_constants.h  Hbase_types.cpp  Hbase_types.h
ThriftInjector/Inject/: BinarySerialization.cxx  BinarySerialization.h  CMakeLists.txt  ExampleLog.cxx  ExampleLog_01.cxx  GidInjectHBase.cxx  GidTypes.cxx  GidTypes.h  Logger.cxx  Logger.h  ParseAsciiMesh.cxx  ParseAsciiMesh.h  ParseAsciiResult.cxx  ParseAsciiResult.h  TestEndianness.cxx  TestParseMeshFile.cxx  TestParseResultFile.cxx  TestStringSerialization.cxx
ThriftInjector/SampleData/HbaseBasicTest/: VELaSSCo_HbaseBasicTest_part-1.post.msh  VELaSSCo_HbaseBasicTest_part-1.post.res  VELaSSCo_HbaseBasicTest_part-2.post.msh  VELaSSCo_HbaseBasicTest_part-2.post.res  VELaSSCo_HbaseBasicTest_part-3.post.res  VELaSSCo_HbaseBasicTest_part-4.post.msh  VELaSSCo_HbaseBasicTest_part_3.post.msh  VELaSSCo_HbaseBasicTest_part_4.post.res
ThriftInjector/SampleData/HbaseBasicTest/tmp/: GiD_ascii_format.txt  IsPointInsideTetrahedron.cc  readme.txt
ThriftInjector/SandBox/: CMakeLists.txt  TestThriftSerializer.cxx
ThriftInjector/Spirit-Tests/: CMakeLists.txt  employee.cpp  mesh_header.cpp  parse_element.cxx  parse_header.cxx  parse_result.cxx
ThriftInjector/VTUConverter/: AABB.h  BVHTree.cpp  BVHTree.h  CMakeLists.txt  README.md  Readme.md  main.cpp
modules/: Makefile
modules/AccessLib/: 3rdParty.zip.REMOVED.git-id  3rdParty_vs2015.zip.REMOVED.git-id  CMakeLists.txt  README.txt  create_for_vs2012.txt  create_for_vs2015.txt
modules/AccessLib/AccessLib/: AccessLib.cpp  AccessLib.h  AccessLibCommon.cpp  AccessLibCommon.h  AccessLibDRQ.cpp  AccessLibMQ.cpp  AccessLibRAQ.cpp  AccessLibSQ.cpp  BoundaryBinaryMesh.h  CMakeLists.txt  Client.cpp  Client.h  Compression.cpp  Compression.h  Crono.h  DemoServer.cpp  DemoServer.h  Helpers.h  RealTimeFormat.h  Server.cpp  Server.h  base64.cpp
modules/AccessLib/CMake/: FindBoost.cmake  FindThrift.cmake
modules/AccessLib/NewCMake/: CMakeLists.txt
modules/AccessLib/NewCMake/AccessLib/: CMakeLists.txt
modules/AccessLib/NewCMake/Test/: CMakeLists.txt
modules/AccessLib/Test/: CMakeLists.txt  Test_Client.cpp  Test_Server.cpp  lrvol_appr_client.cpp
modules/AccessLib/Thrift/: README.txt  velassco.thrift
modules/AccessLib/Thrift/gen-cpp/: QueryManager.cpp  QueryManager.h  QueryManager_server.skeleton.cpp  velassco_constants.cpp  velassco_constants.h  velassco_types.cpp  velassco_types.h
modules/DataLayer/Storage/: AbstractDB.h  BinarySerialization.cxx  BinarySerialization.h  Crono.h  Curl_cmd.h  EDM.cpp  EDM.h  HBase.cpp  HBase.h  HBase_model_operations.cpp  HBase_result_queries.cpp  HBase_status.cpp  Helpers.cpp  Helpers.h  Makefile  Start_Storage  base64.h  main.cpp  storageModule.cpp  storageModule.h  velasscoThrift.cpp  velasscoThrift.h
modules/DataLayer_Deprecated/Storage/: HBase.cpp  base64.cpp  storageModule.cpp
modules/EngineLayer/Analytics/: README.TXT
modules/EngineLayer/QueryManager/: AccessLib.h  Analytics.cpp  Analytics.h  Compression.cpp  DataLayerAccess.cpp  DataLayerAccess.h  EdmAccess.h  Graphics.cpp  Graphics.h  GraphicsElementTypes.h  Helpers.h  Makefile  RealTimeFormat.h  Server.cpp  Server.h  Server_direct_result_queries.cpp  Server_monitoring_queries.cpp  Server_result_analysis_queries.cpp  Server_session_queries.cpp  Start_QueryManager  cJSON_README.txt  main.cpp  queryManagerModule.cpp  queryManagerModule.h
modules/EngineLayer_Deprecated/QueryManager/: Analytics.cpp  (+7 more)
modules/Platform/: Makefile  Makefile.edm  QueryManager  QueryManager.sh  VELaSSCo_platform.doxygen  globalSettings.h  main.cpp  startEDMqueryManager.sh  testSwap.cc
modules/Plug_in_tests/: ReadMe.txt  plug_in_tests.cpp  plug_in_tests.sln  plug_in_tests.vcxproj  stdafx.cpp  stdafx.h
modules/Storage/: main.cpp
oldDev-Benoit/load_hbase-V0/: main.cpp
oldDev-Benoit/measure_hbase/: Makefile  main.cpp  up.sh
oldDev-Benoit/thrift/: shared.thrift  tutorial.thrift
oldDev-Benoit/velassco/: up.sh
(+602 files in other folders)
